osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_dynamic_calls_have_annotated_rvalue/test_generic_fn_must_have_compatible_type.txt
error: annotation is incompatible with generic return type
--> main.sml:1:3
     |
   1 | A: str = EntityJson(type='User', path='$.foo')
     |    ^ annotation is incompatible with `EntityJson` return type `Entity[~_T]`